feat: add getlog api
